--- a/templates/src/pages/storykeep.astro
+++ b/templates/src/pages/storykeep.astro
@@ -57,7 +57,7 @@ try {
 }
 ---
 
-<Layout title={title} storykeep={true} slug="storykeep">
+<Layout title={title} isStoryKeep={true} slug="storykeep">
   <main id="main-content" class="min-h-screen w-full">
     <div class="p-8">
       <StoryKeepDashboard
