--- a/templates/custom/minimal/CodeHook.astro
+++ b/templates/custom/minimal/CodeHook.astro
@@ -1,5 +1,5 @@
 ---
-// V2 CodeHook Dispatcher - Minimal Version
+// CodeHook Dispatcher - Minimal Version
 // Framework components are always available, custom components are commented for guidance
 
 import FeaturedContent from '@/components/codehooks/FeaturedContent.astro';
