--- a/templates/src/layouts/Layout.astro
+++ b/templates/src/layouts/Layout.astro
@@ -251,6 +251,7 @@ const fullCanonicalUrl = brandConfig?.SITE_URL
           isContext={isContext}
           isStoryKeep={isStoryKeep}
           isEditable={isEditable}
+          sessionId={sessionId}
           menu={menu}
         />
       )
